--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </p>
       </div>
       <div class="six">
-        <img src="img/vector.jpg" alt="" class = "girl-dp" id="imagePath" />
+        <img src="img/cat-yes.jpg" alt="" class = "girl-dp" id="imagePath" />
         <div class="wish">
           <h3 class="wish-hbd">Gratulerer med Valentinsdagen snuppa</h3>
           <h5 id="wishText">meow</h5>
