--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="container">
       <div class="one">
         <h1 class="one">
-          Hey
+          Hei på deg
           <span id="name">Tine</span>
         </h1>
         <p class="two" id="greetingText">Digger navnet ditt btw!!</p>
