--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@
         </p>
         <p class="idea-6">
           <span>S</span>
-          <span>O</span>
+          <span>Å</span>
         </p>
       </div>
       <div class="six">
         <img src="img/cat-yes.jpg" alt="" class = "girl-dp" id="imagePath" />
         <div class="wish">
-          <h3 class="wish-hbd">Gratulerer med Valentinsdagen snuppa</h3>
+          <h3 class="wish-hbd">Gratulerer Med Valentinsdagen Snuppa</h3>
           <h5 id="wishText">meow</h5>
         </div>
       </div>
@@ -126,7 +126,7 @@
       </div>
       <div class="nine">
         <p>Okay, det var det. Sees neste uke</p>
-        <p id="replay">Klikk hvis du vil se den igjen :)</p>
+        <p id="replay">Klikk hvis du vil se den igjen </p>
         <p class="last-smile">:)</p>
       </div>
     </div>
