--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <div class="four">
         <div class="text-box">
           <p class="hbd-chatbox">
-            Gratulerer med valentinsdagen søta <3
+            Gratulerer med valentinsdagen søtapena123
           </p>
           <p class="fake-btn">Send</p>
         </div>
